fixes for 3024 and also to fix the issue of class code not visible on student class cards

--- a/app/styles/components/cards/_gru-class-card.scss
+++ b/app/styles/components/cards/_gru-class-card.scss
@@ -24,7 +24,7 @@
         width: 85%;
         padding: 6px 0;
         font-size: 16px;
-        color: $light-600;
+        color: $dark-600;
 
         a {
           color: $white;
